# drive_ros_image_recognition

./: CMakeLists.txt  README.md  image_processing.cpp  nodelets.xml  package.xml  warp_image_nodelet.xml
cfg/: BarredAreaDetection.cfg  CrossingDetection.cfg  CrosswalkDetection.cfg  LineDetection.cfg  NewRoadDetection.cfg  RoadDetection.cfg  SpeedMarkingDetection.cfg
config/: camera_matrix.yaml  homography.yaml  homography_matrix.yaml  new_road_detection.yaml  road_detection.yaml
include/drive_ros_image_recognition/: common_image_operations.h  crosswalk_detection.h  detection.h  edge_point.h  geometry_common.h  image_object.h  image_processing.h  line.h  line_detection.h  line_point.h  line_recognition.h  new_road_detection.h  polynom.hpp  road_detection.h  road_model.h  speed_marking_detection.h  street_crossing.h  street_line.h  warp_image.h
launch/: crosswalk_detection.launch  image_processing.launch  image_publisher_node.launch  line_detection.launch  line_recognition.launch  line_recognition_debug.launch  new_road_detection.launch  new_road_detection_debug.launch  new_road_detection_nodelet.launch  road_detection.launch  road_detection.test  road_detection_debug.launch  road_detection_nodelet.launch  speed_marking_detection.launch  street_crossing.launch  street_crossing_nodelet.launch  testing_pipeline.launch  vision.launch  vision_nodelet.launch  warp_image.launch  warp_image_nodelet.launch
msg/: RoadLane.msg
scripts/: image_processing_node.py  publish_road.sh
src/: crosswalk_detection.cpp  crosswalk_detection_node.cpp  edge_point.cpp  image_processing.cpp  image_processing_node.cpp  image_publisher_node.cpp  line_detection.cpp  line_detection_node.cpp  line_point.cpp  line_recognition.cpp  line_recognition_node.cpp  new_road_detection.cpp  new_road_detection_node.cpp  publish_road.cpp  road_detection.cpp  road_detection_node.cpp  road_model.cpp  speed_marking_detection.cpp  speed_marking_detection_node.cpp  street_crossing.cpp  street_crossing_node.cpp  warp_image.cpp  warp_image_node.cpp
srv/: ImageToWorld.srv  WorldToImage.srv
test/: common_image_operations_test.cpp  common_image_operations_test.test  geometry_common_test.cpp  road_detection_test.cpp
